fix multiple publisher usage